# battlenet-client

./: .coverage  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG  README.md  README.rst  clients.py  env.sample  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
battlenet_client/: client.py  constants.py
docs/source/: conf.py  dev_portal.rst  footer.rst  header.rst  index.rst  intro.rst  references.rst
src/battlenet_client/: client.py  clients.py  constants.py  decorators.py  exceptions.py  misc.py  utils.py
src/battlenet_client.egg-info/: PKG-INFO  SOURCES.txt
src/d3/: __init__.py  client.py  exceptions.py
src/hs/: __init__.py  client.py  exceptions.py  game.py
src/sc2/: account.py  client.py  exceptions.py  ladder.py  legacy.py  profile.py  resources.py  sc2.py
src/wow/: account.py  achievement.py  auction.py  azerite.py  character.py  client.py  connected_realm.py  constants.py  covenant.py  creature.py  decorators.py  exceptions.py  guild.py  item.py  journal.py  media.py  modcraft.py  mount.py  mythic_plus.py  mythic_raid.py  pet.py  playable_class.py  playable_race.py  playable_spec.py  power.py  profession.py  pvp.py  quest.py  realm.py  region.py  reputation.py  spell.py  talent.py  tech_talent.py  title.py  wow_token.py
test/: test_credential.py
test/templates/: index.jinja
tests/: test_credential.py  test_utils.py
tests/battlenet_client/: constants.py  test_constants.py  test_utils.py
tests/bnet/: conftest.py  test_credential.py  test_oauth.py  test_utils.py
(+231 files in other folders)
