[metadata]
name = battlenet_client
version = 3.0.0a2
description = Battle.net REST API Connections
url = https://www.gitlab.com/battlenet1/battlenet-client/
author = David Couples
author_email = gahdania@gahd.io
license = GPL v3+
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    battlenet_client
    battlenet_client.bnet
    battlenet_client.d3
    battlenet_client.hs
    battlenet_client.sc2
    battlenet_client.wow
include_package_data = True
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
battlenet_client = py.typed

[flake8]
max-line-length = 160
